syntax = "proto3";

package shapewars;

option java_multiple_files = true;
option java_package = "me.partlysunny.shapewars.proto";
option java_outer_classname = "GameSaveProtos";

message PlayerInfo {

  optional float inGameTime = 1;
  optional float maxHealth = 2;
  optional float health = 3;
  optional int32 money = 4;
  optional int32 level = 5;

  optional AmmoManager ammoManager = 6;
  optional PlayerEquipment equipment = 7;

  message PlayerEquipment {
    optional string weapon1 = 1;
    optional string weapon2 = 2;
    optional string armor1 = 3;
    optional string armor2 = 4;

    optional UtilInventory utilities = 5;
    optional UnlockedItems unlockItems = 6;

    message UtilInventory {
      repeated UtilItem items = 1;

      message UtilItem {
        optional string type = 1;
        optional int32 amount = 2;
      }
    }

    message UnlockedItems {
      repeated string weapons = 1;
      repeated string armors = 2;
    }
  }

  message AmmoManager {

    repeated GunInfo ammoRemaining = 1;

    message GunInfo {
      optional string type = 1;
      optional int32 remaining = 2;
    }

  }

}